8/29/2003   version 0.1.10  Ian Lewis  <IanLewis@member.fsf.org>

    * Fixed indentation when serializing a document.
    * Changed the layout of the options dialog. It looks a little better now.

8/28/2003   version 0.1.9  Ian Lewis  <IanLewis@member.fsf.org>

    * Changed the DOMSerializer class to conform to the DOM3 standard
      DOMWriter (old) interface. Used the java.io.OutputStreamWriter class for
      encoding. Added an encoding option to the option dialog.
    * Fixed bug in DefaultXMLDocument that messed up which model the object was
      using.
    * Fixed bug with createElement() creating elements with a null local name.
      Used createElementNS() instead.

8/24/2003   version 0.1.7   Ian Lewis  <IanLewis@member.fsf.org>

    * Updated Serialization and options dialog.

8/24/2003   version 0.1.6   Ian Lewis  <IanLewis@member.fsf.org>

    * Implemented more features for DOMSerializer.
    * Updated the Options Dialog to have serialization options.

8/18/2003   version 0.1.5   Ian Lewis  <IanLewis@member.fsf.org>

    * Updated DOMSerializer to work with basic features and formatting.

7/31/2003   version 0.1.4   Ian Lewis   <IanLewis@member.fsf.org>

    * Moved the DOMSerializer towards dom3 complience.

7/21/2003   version 0.1.3   Ian Lewis   <IanLewis@member.fsf.org>

    * Added javadoc to CustomFileFilter.java
    * Updated the headers of all the files.
    * Changed how jsXe saves files so that the XMLDocument class is independent
      of gui implementation.
    * Fixed a bug where jsXe didn't update the XMLDocument name in the
      TabbedView.
    * Fixed a bug that caused problems when saving as a file that was already
      open.

7/16/2003   version 0.1.2   Ian Lewis   <IanLewis@member.fsf.org>

    * Added javadoc to jsXe.java and TabbedView.java. Added a context menu to
      the attributes table so that attributes can be removed.

07/09/2003  version 0.1.1   Ian Lewis   <IanLewis@member.fsf.org>
